microservices/04-kubernetes-orchestrating-services/kubernetes/client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  type: LoadBalancer
  ports:
    - name: client
      protocol: TCP
      # Using NGINX reverse proxy
      port: 80
      targetPort: 80
      # Using NGINX ingress service
      # port: 5173
      # targetPort: 5173

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: rkatorjuliusworks/blog-microservices-client
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
