microservices/04-kubernetes-orchestrating-services/kubernetes/comments.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  selector:
    app: comments
  type: LoadBalancer
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: rkatorjuliusworks/blog-microservices-comments
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
