microservices/04-kubernetes-orchestrating-services/kubernetes/moderation.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
  selector:
    app: moderation
  type: ClusterIP
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: rkatorjuliusworks/blog-microservices-moderation
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
