microservices/04-kubernetes-orchestrating-services/kubernetes/query.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    app: query
  type: LoadBalancer
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: rkatorjuliusworks/blog-microservices-query
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
