microservices/04-kubernetes-orchestrating-services/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    app.kubernetes.io/name: ingress-service
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: "/posts"
            backend:
              service:
                name: posts-service
                port:
                  number: 4000
